Update Controller, add dashbaord,login,register page, Websecurity class

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -45,7 +45,7 @@
         </form>
 
         <p class="auth-links">
-            <a th:href="@{/login}" href="/login">Already have an account?</a>
+            <a th:href="@{/login}">Already have an account?</a>
         </p>
     </main>
 </div>
