--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,8 +15,8 @@
         <h2>Sign in</h2>
 
         <form th:action="@{/login}" method="post">
-            <input type="text" name="username" placeholder="email" required />
-            <input type="password" name="password" placeholder="password" required />
+            <input type="text" name="email" placeholder="email" required />
+            <input type="password" name="pwd" placeholder="password" required />
             <button type="submit" class="btn btn-primary btn-block">Sign in</button>
         </form>
 
