--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,19 +15,19 @@
         <h1 id="reg-title" class="auth-title">Create your account</h1>
 
 
-        <form class="auth-form" th:action="@{/register}"  method="post" novalidate>
+        <form  th:action="@{/createUser}"  method="post" class="auth-form" th:object="${user}">
             <!-- Email -->
             <label class="field">
                 <span class="label-text">Email</span>
-                <input type="email" name="email" id="email" placeholder="you@example.com" required>
+                <input type="email" th:field="*{email}" placeholder="you@example.com" required>
             </label>
 
             <!-- Password -->
             <label class="field">
                 <span class="label-text">Password</span>
                 <div class="password-field">
-                    <input type="password" name="password" id="password" minlength="8" placeholder="Minimum 8 characters" required>
-                    <button type="button" class="peek" aria-label="Show password" data-target="password">Show</button>
+                    <input type="password" th:field="*{pwd}"  minlength="8" placeholder="Minimum 8 characters" required>
+                    <button type="button" class="peek" aria-label="Show password" data-target="pwd">Show</button>
                 </div>
                 <div class="hint" id="pw-hint">Use 8+ characters with letters & numbers.</div>
             </label>
@@ -36,8 +36,8 @@
             <label class="field">
                 <span class="label-text">Confirm password</span>
                 <div class="password-field">
-                    <input type="password" name="confirmPassword" id="confirmPassword" minlength="8" required>
-                    <button type="button" class="peek" aria-label="Show confirm password" data-target="confirmPassword">Show</button>
+                    <input type="password" th:field="*{confirmPwd}" minlength="8" required>
+                    <button type="button" class="peek" aria-label="Show confirm password" data-target="confirmPwd">Show</button>
                 </div>
             </label>
 
@@ -63,8 +63,8 @@
     });
 
     // simple confirm-password check
-    const pw = document.getElementById('password');
-    const cpw = document.getElementById('confirmPassword');
+    const pw = document.getElementById('pwd');
+    const cpw = document.getElementById('confirmPwd');
     const msg = document.getElementById('matchMsg');
     const submit = document.getElementById('submitBtn');
 
